<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_alignParentEnd="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.android.jason.customcalculator.CalculatorActivity$PlaceholderFragment"
    android:weightSum="1"
    tools:showIn="@layout/activity_calculator">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editExpr"
        android:hint="@string/calc_input_hint"
        android:digits="1234567890./-+x"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        android:inputType="text" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom">
        <TableRow>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_clear"
                android:id="@+id/keyCLR"
                android:layout_column="0"
                android:background="#37383b"
                android:textColor="#ffffff"
                android:textSize="40sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:layout_span="3"
                android:onClick="onClearClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_del"
                android:id="@+id/keyDel"
                android:layout_column="0"
                android:background="#c35920"
                android:textColor="#ffffff"
                android:textSize="40sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:layout_span="1"
                android:onClick="onDeleteClick" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_1"
                android:id="@+id/key1"
                android:layout_column="0"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onNumberClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_2"
                android:id="@+id/key2"
                android:layout_column="1"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onNumberClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_3"
                android:id="@+id/key3"
                android:layout_column="2"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onNumberClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_plus"
                android:id="@+id/keyPlus"
                android:layout_column="0"
                android:background="#c35920"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onOperatorClick" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_4"
                android:id="@+id/key4"
                android:layout_column="0"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onNumberClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_5"
                android:id="@+id/key5"
                android:layout_column="1"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onNumberClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_6"
                android:id="@+id/key6"
                android:layout_column="2"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onNumberClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_minus"
                android:id="@+id/keyMinus"
                android:layout_column="0"
                android:background="#c35920"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onOperatorClick" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_7"
                android:id="@+id/key7"
                android:layout_column="0"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onNumberClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_8"
                android:id="@+id/key8"
                android:layout_column="1"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onNumberClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_9"
                android:id="@+id/key9"
                android:layout_column="2"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onNumberClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_divide"
                android:id="@+id/keyDiv"
                android:layout_column="0"
                android:background="#c35920"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onOperatorClick" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_0"
                android:id="@+id/key0"
                android:layout_column="0"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onNumberClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_dot"
                android:id="@+id/keyDot"
                android:layout_column="1"
                android:background="#506eaa"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onDotClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_equals"
                android:id="@+id/keyEq"
                android:layout_column="2"
                android:background="#c35920"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onEqualClick" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/key_multiply"
                android:id="@+id/keyMul"
                android:layout_column="2"
                android:background="#c35920"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:typeface="monospace"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:onClick="onOperatorClick" />
        </TableRow>

    </TableLayout>

</LinearLayout>
